# lya-eft

./: README.md  pyproject.toml
configs/: baseline_ivanov.yaml
scripts/: check_imports.py  debug_ivanov_full_model.py  debug_ivanov_full_vs_classpt.py  fetch_2405_public_data.sh  fit_ivanov_eft_to_classpt.py  run_2405_stage1_sdss_baseline.py  run_2405_stage1_sdss_mcmc.py  run_2405_stage1_sherwood_full.py  run_2405_stage1_sherwood_hybrid.py  run_2405_stage1_sherwood_repro.py  run_backend_sanity.py  run_bias_mcmc.py  run_cosmo_mcmc_fixed_bias.py  run_ivanov_full_sherwood_singlez.py  run_ivanov_toy_baseline.py  run_joint_mcmc.py  run_joint_mcmc_multiz.py  run_sherwood_highk_scan.py  run_sherwood_pk_residual_comparison.py  run_sherwood_toy_fit.py  setup_env.sh
scripts-jax/: run_2405_stage1_sdss_baseline_jax.py  run_2405_stage1_sherwood_jax.py  test_run_2405_stage1_sdss_baseline_jax.py
src-jax/lya_hybrid_jax/: __init__.py  model_ivanov_full_jax.py  projection_1d_jax.py  systematics_jax.py
src/lya_hybrid/: __init__.py  class_pt_backend.py  config.py  diagnostics.py  grids.py  io.py  linear_power.py  logging_utils.py  model_hybrid.py  model_ivanov.py  model_ivanov_full.py  operators_ivanov.py  projection_1d.py  sdss_p1d.py  velocileptors_backend.py
src/lya_hybrid/tests/: test_hybrid_limits.py  test_ivanov_full_model.py  test_projection_1d.py
